--- a/web/css/settlement.css
+++ b/web/css/settlement.css
@@ -6,7 +6,7 @@ body {background-color:antiquewhite;}
 .settlement h4 {color:#000000;border-bottom:1px solid #000000;margin-bottom:0px; text-transform:uppercase;}
 
 /* Size and Attributes */
-.settlement .size {font-family: 'Tauri', sans-serif; float: right; text-align:right; inline-block; font-size:.4cm; color:black; margin-bottom:-3px; text-transform:uppercase; border: 0px;}
+.settlement .size {font-family: 'Tauri', sans-serif; float: right; text-align:right; font-size:.4cm; color:black; margin-bottom:-3px; text-transform:uppercase; border: 0px;}
 .settlement .taglist {height:22px;}
 .settlement .tag {font-family: 'Roboto Condensed', sans-serif; border-color:#DAC68A; border: 1px solid #DAC68A; border-left: 2px solid #DAC68A; border-right: 2px solid #DAC68A; border-radius:2px; background-color:#58180D; color:white; text-align:center; margin-top:2px; margin-right:2px; min-width:30px; float:left; margin-bottom:-5px; padding-left:3px; padding-right:3px; text-transform:uppercase; }
 .settlement .type {background-color: green !important;}
@@ -15,7 +15,19 @@ body {background-color:antiquewhite;}
 /* Description */
 .settlement .desc {padding-top:5px;}
 
-.settlement .govt:before {content: "Government "; font-weight: bold; padding-top:15px;}
-.settlement .pop:before {content: "Population "; font-weight: bold; padding-top:15px;}
-.settlement .lang:before {content: "Languages "; font-weight: bold; padding-top:15px;}
+/* First description Block, always end with .lang class */
+.settlement .govt:before {content: "Government "; font-weight: bold;}
+.settlement .pop:before {content: "Population "; font-weight: bold; }
+.settlement .lang:before {content: "Languages "; font-weight: bold; }
 .settlement .lang {border-bottom: 1px solid #000000; margin-bottom: 0px;}
+
+/* Second description block */
+.settlement .religion:before {content: "Religion "; font-weight: bold;}
+.settlement .threats:before {content: "Threats "; font-weight: bold;}
+.settlement .othertraits-name {font-weight: bold; }
+.settlement .othertraits-desc {font-weight: normal; display: inline;}
+
+/* NPCs - start npc section with .npcs class for divider */
+.settlement .npcs {border-top: 1px solid #000000; margin-top: 0px;}
+.settlement .npc-name {font-weight: bold;}
+.settlement .npc-desc {font-weight: normal; display: inline;}
