--- a/web/css/settlement.css
+++ b/web/css/settlement.css
@@ -1,3 +1,14 @@
+/**
+A css stylesheet for Pathfinder 2E settlement descriptions (https://www.paizo.com/pathfinder).
+Based on the one found at GM Binder (https://www.gmbinder.com/share/-LxQNtitjvBT2eCVkPt1).
+To be converted for Goblin Notebook (https://www.the-goblin.net/notebook).
+
+Author:         Ed Abshire
+Initial Date:   21 Jan 2024
+Modify Date:    
+
+**/
+
 @import url('https://fonts.googleapis.com/css?family=Eczar:800|Roboto+Condensed|Tauri|Teko:500|Changa+One|Gelasio|DM+Serif+Text:400i&display=swap');
 
 /* Header/Name */
